# faceverification

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.persist.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: azure-oidc-test.yml  ci.yml  container-build-scan-publish.yml  deploy-azure-container-app.yml  deploy-to-HSspaces  deploy-to-HSspaces.yml  docker-build.yml
docker/: constraints.txt
infra/bicep/: main.bicep
src/faceverification/: app.py  config.py  logging_config.py
src/faceverification/core/: image_processor.py  vectordb.py
src/faceverification/interfaces/: fastapi_app.py  gradio_app.py
src/faceverification/services/: face_verification.py
test/: test_face_verification.py  test_face_verification_e2e.py  test_face_verification_integration.py  test_face_workflow_integration.py  test_fastapi_app.py  test_image_processor.py  test_image_processor_integration.py  test_vectordb.py  test_vectordb_integration.py
